--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,124 +1,137 @@
 * {
-  box-sizing: border-box;
-}
+    box-sizing: border-box;
+  }
+  
+  body,
+  html {
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: #1d1db8;
+  }
+  
+  a {
+    text-decoration: none;
+    color: #1d1db8;
+  }
+  
+  a:hover {
+    color: #4169e1;
+  }
+  
+  ul li {
+    list-style-type: none;
+  }
+  
+  label {
+    font-size: 20px;
+    font-weight: bold;
+    color: #1d1db8;
+  }
+  
+  .button {
+    background-color: #b9e141;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
+  
+  .button:hover {
+    background-color: #69e141;
+  }
+  
+  /*Header*/
+  #head {
+    margin: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  #head a {
+    font-weight: bold;
+    padding: 10px;
+    font-size: larger;
+  }
+  
+  #head h1 {
+    font-size: 43px;
+  }
+  
+  /*Nav*/
+  
+  #nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* font-size: medium; */
+  }
+  
+  /*Main*/
+  .topic {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .topic h3 {
+    font-size: 60px;
+    padding-bottom: 40px;
+  }
+  
+  .topic-section {
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+  
+  .card {
+    border-radius: 5px;
+  }
+  
+  .contact {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .contact li {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: large;
+  }
+  
+  .about {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+  .about p {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  
+  .about-section {
+    margin: 30px;
+  }
+  
+  .footer {
+    display: flex;
+    justify-content: flex-end;
+    margin: 5px;
+    border-top: 3px solid #1d1db8;
+  }
+  /*Login/Signup*/
+  
+  .radio {
+      font-size: 15px;
+      font-weight:normal;
+    }
+  
+  /*Cat-a-log*/
+  
+  /*Posts*/
+  
+  /*Resources*/
 
-body,
-html {
-  height: 100%;
-  padding: 0px;
-  margin: 0px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: #1d1db8;
-}
-
-a {
-  text-decoration: none;
-  color: #1d1db8;
-}
-
-a:hover {
-  color: #4169e1;
-}
-
-ul li {
-  list-style-type: none;
-}
-
-.button {
-  background-color: #b9e141;
-  border-radius: 5px;
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
-
-.button:hover {
-  background-color: #69e141;
-}
-
-/*Header*/
-#head {
-  margin: 5px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#head a {
-  font-weight: bold;
-  padding: 10px;
-  font-size: larger;
-}
-
-#head h1 {
-  font-size: 43px;
-}
-
-/*Nav*/
-
-#nav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* font-size: medium; */
-}
-
-/*Main*/
-.topic {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.topic h3 {
-  font-size: 60px;
-  padding-bottom: 40px;
-}
-
-.topic-section {
-  margin-top: 50px;
-  margin-bottom: 30px;
-}
-
-.card {
-  border-radius: 5px;
-}
-
-.contact {
-  display: flex;
-  justify-content: center;
-}
-
-.contact li {
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: large;
-}
-
-.about {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-}
-.about p {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.about-section {
-  margin: 30px;
-}
-
-.footer {
-  display: flex;
-  justify-content: flex-end;
-  margin: 5px;
-  border-top: 3px solid #1d1db8;
-}
-/*Login/Signup*/
-
-/*Cat-a-log*/
-
-/*Posts*/
-
-/*Resources*/
+  /*BONUS PAGE*/
