--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,16 +8,16 @@
     padding: 0px;
     margin: 0px;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    color: #1d1db8;
+    color: black;
   }
   
   a {
     text-decoration: none;
-    color: #1d1db8;
+    color: black;
   }
   
   a:hover {
-    color: #4169e1;
+    color: grey;
   }
   
   ul li {
@@ -27,7 +27,7 @@
   label {
     font-size: 20px;
     font-weight: bold;
-    color: #1d1db8;
+    color: black;
   }
   
   #logo {
@@ -37,7 +37,7 @@
   }
   
   .card {
-      color: #1d1db8;
+      color: black;
   }
   
   
@@ -131,7 +131,7 @@
     display: flex;
     justify-content: flex-end;
     margin: 5px;
-    border-top: 3px solid #1d1db8;
+    border-top: 3px solid black;
   }
   /*Login/Signup*/
   
@@ -146,7 +146,7 @@
   
   .comment {
       font-size: 14px;
-      color: #1d1db8;
+      color: black;
   }
   
   #com-button {
@@ -154,7 +154,7 @@
   }
   
   .com-form {
-      border-top: 1px solid #1d1db8;
+      border-top: 1px solid black;
   }
 
     /*BONUS PAGE*/
