--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <title>web-dev social</title>
+        <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css"
       crossorigin="anonymous"
     />
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
-    <link rel="stylesheet" href="./style.css" />
-    <title>web-dev social</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <header>
       <div id="head">
-        <h1><a href=""><img src="cat-on-log.jpg" alt="Cat on a Log" id="logo">web-dev social</a></h1>
+        <h1><a href=""><img src="/assets/images/cat-on-log.jpg" alt="Cat on a Log" id="logo">web-dev social</a></h1>
         <div>
           <a href="/">login</a>
           <a href="/">sign up</a>
