login/signup routes

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <!--Nav Section-->
 <section>
 <div id="nav">
-    <h2><a href="">about</a></h2>
+    <h2><a href="#about">about</a></h2>
     <h2><a href="">cat-a-log</a></h2>
     <h2><a href="">resources</a></h2>
     <h2><a href="" class="button large">create a post</a></h2>
@@ -50,7 +50,7 @@
 </div>
 </section>
 <!--About Section-->
-<section class="about-section">
+<section class="about-section" id="about">
 <div class="about">
     <h3>about</h3>
 </div>
@@ -72,11 +72,11 @@
 </div>
 <div>
     <ul class="contact">
-    <li><a href="">Michael</a></li>
-    <li><a href="https://github.com/Boris-Veselov">Boris</a></li>
-    <li><a href="https://github.com/griffondo">Griffin</a></li>
-    <li><a href="https://github.com/mmilner29">Madi</a></li>
-    <li><a href="">Oscar</a></li>
+    <li><a href="" target="_blank">Michael</a></li>
+    <li><a href="https://github.com/Boris-Veselov" target="_blank">Boris</a></li>
+    <li><a href="https://github.com/griffondo" target="_blank">Griffin</a></li>
+    <li><a href="https://github.com/mmilner29" target="_blank">Madi</a></li>
+    <li><a href="" target="_blank">Oscar</a></li>
     </ul>
 </div>
 </section>
