routes to login, signup, allposts, and resources

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,22 +2,22 @@
 <section>
 <div id="nav">
     <h2><a href="#about">about</a></h2>
-    <h2><a href="">cat-a-log</a></h2>
-    <h2><a href="">resources</a></h2>
+    <h2><a href="/cat-a-log">cat-a-log</a></h2>
+    <h2><a href="/resources">resources</a></h2>
     <h2><a href="" class="button large">create a post</a></h2>
 </div>
 </section>
 <!--Posts section-->
 <section class="topic-section">
 <div class="topic">
-    <h3><a href="">explore</a></h3>
+    <h3><a href="#explore">explore</a></h3>
 </div>
 <div>
-    <div class="grid-container">
+    <div class="grid-container" id="explore">
     <div class="grid-x align-center grid-margin-x">
         <div class="card cell small-10 medium-6 large-4 align-spaced">
         <h4 class="card-divider align-center">
-            <a href="">"boot"-campfire</a>
+            <a href="/allposts">"boot"-campfire</a>
         </h4>
         <div class="card-section text-center">
             <p>
@@ -28,7 +28,7 @@
         </div>
         <div class="card cell small-10 medium-6 large-4">
         <h4 class="card-divider align-center">
-            <a href="">have questions?</a>
+            <a href="/allposts">have questions?</a>
         </h4>
         <div class="card-section text-center">
             <p>
@@ -39,7 +39,7 @@
         </div>
         <div class="card cell small-10 medium-6 large-4">
         <h4 class="card-divider align-center">
-            <a href="">miscellaneous</a>
+            <a href="/allposts">miscellaneous</a>
         </h4>
         <div class="card-section text-center">
             <p>Looking for developer memes? Look no further!</p>
