granim feature added

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,6 @@
     <h2><a href="#about">about</a></h2>
     <h2><a href="/cat-a-log">cat-a-log</a></h2>
     <h2><a href="/resources">resources</a></h2>
-    <h2><a href="" class="button large">create a post</a></h2>
 </div>
 </section>
 <!--Posts section-->
@@ -49,6 +48,10 @@
     </div>
 </div>
 </section>
+<!--Create Post Section-->
+{{!-- <div class="create">
+    <a href="" class="button large" id="crtbtn">create a post</a>
+</div> --}}
 <!--About Section-->
 <section class="about-section" id="about">
 <div class="about">
@@ -67,7 +70,7 @@
 <section class="contact-section">
 <div>
     <div class="contact">
-    <h3>contact</h3>
+    <h3>connect with us</h3>
     </div>
 </div>
 <div>
