--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,11 +15,15 @@
   </head>
   <body>
     <header>
-      <div id="head">
-        <h1><a href="/"><img src="/assets/images/cat-on-log.jpg" alt="Cat on a Log" id="logo">web-dev social</a></h1>
+        <canvas id="Granim"></canvas>
+      <div class="head">
+        <h1><a href="/" >
+        {{!-- <img src="/assets/images/cat-on-log.png" alt="Cat on a Log" id="logo"> --}}
+        web-dev social</a></h1>
         <div>
           <a href="/login">login</a>
           <a href="/signup">sign up</a>
+          <a href="" class="button large" id="crtbtn">create a post</a>
         </div>
       </div>
     </header>
@@ -32,5 +36,7 @@
         <h5>© 2022 web-dev social</h5>
       </div>
     </footer>
+    <script src="https://cdn.tutorialjinni.com/granim/2.0.0/granim.js"></script>
+    <script src="/javascript/main.js"></script>
   </body>
 </html>
