--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -44,7 +44,7 @@
     <div class="grid-x grid-padding-x">
         <div class="medium-6 cell">
         <label for="interest" class="middle">
-            why are you interested in bootcamp?
+            why are you interested in a coding bootcamp?
             </label
         ><br />
         <textarea
