--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,9 +36,8 @@
 
   
   #logo {
-      height: 55px;
-      width: 80px;
-      margin-right: 10px;
+      height: 45px;
+      width: 70px;
   }
   
   .card {
@@ -231,7 +230,10 @@ textarea {
 
 
 .topic h3 {
-    font-size: 50px;
     padding-bottom: 40px;
+}
+
+h3 {
+    font-size: 50px;
 }
 } 
