add preview & comments

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
   </head>
   <body>
     <header>
+        <!--gradient background-->
         <canvas id="Granim"></canvas>
       <div class="head">
         <h1><a href="/" >
@@ -29,6 +30,7 @@
     </header>
 
     <main>
+        <!--import body from other handlebars files-->
         {{{body}}}
     </main>
     <footer>
@@ -36,6 +38,7 @@
         <h5>© 2022 web-dev social</h5>
       </div>
     </footer>
+    <!--import js & cdn for gradient/granim feature-->
     <script src="https://cdn.tutorialjinni.com/granim/2.0.0/granim.js"></script>
     <script src="/javascript/main.js"></script>
   </body>
