updated github links

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -75,11 +75,11 @@
 </div>
 <div>
     <ul class="contact">
-    <li><a href="" target="_blank">Michael</a></li>
+    <li><a href="https://github.com/michaelphan35" target="_blank">Michael</a></li>
     <li><a href="https://github.com/Boris-Veselov" target="_blank">Boris</a></li>
     <li><a href="https://github.com/griffondo" target="_blank">Griffin</a></li>
     <li><a href="https://github.com/mmilner29" target="_blank">Madi</a></li>
-    <li><a href="" target="_blank">Oscar</a></li>
+    <li><a href="https://github.com/OSCARHERNANDEZ2022" target="_blank">Oscar</a></li>
     </ul>
 </div>
 </section>
