--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         <canvas id="Granim"></canvas>
       <div class="head">
         <h1><a href="/" >
-        {{!-- <img src="/assets/images/cat-on-log.png" alt="Cat on a Log" id="logo"> --}}
+        <img src="/assets/images/cat-on-log.png" alt="Cat on a Log" id="logo">
         web-dev social</a></h1>
         <div>
           <a href="/login">login</a>
