--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,8 +14,8 @@
             <input type="password" id="pass" placeholder="password" /><br />
         </div>
         </div>
+        <a href="" class="button large" id="submitbtn">submit</a>
     </div>
-
 </form>
 
 <script src="/javascript/login.js"></script>
