--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -54,6 +54,7 @@
         ></textarea>
         </div>
     </div>
+    <a href="" class="button large" id="submitbtn">submit</a>
     </div>
 </form>
 </div>
