--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,7 +4,7 @@
     <div class="grid-x grid-padding-x">
         <div class="medium-6 cell">
         <label for="user" class="middle">username:</label>
-        <input type="text" id="user" placeholder="username" /><br />
+        <input type="text" id="user" placeholder="username" autocomplete="username" /><br />
         </div>
     </div>
     </div>
@@ -12,7 +12,7 @@
     <div class="grid-x grid-padding-x">
         <div class="medium-6 cell">
         <label for="email" class="middle">email:</label>
-        <input type="text" id="email" placeholder="email" /><br />
+        <input type="text" id="email" placeholder="email" autocomplete="email" /><br />
         </div>
     </div>
     </div>
@@ -20,7 +20,7 @@
     <div class="grid-x grid-padding-x">
         <div class="medium-6 cell">
         <label for="pass" class="middle">password:</label>
-        <input type="password" id="pass" placeholder="password" /><br />
+        <input type="password" id="pass" placeholder="password" autocomplete="current-password" /><br />
         </div>
     </div>
     </div>
