--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
         <div class="grid-x grid-padding-x">
         <div class="medium-8 large-6 cell">
             <label for="user" class="middle">username:</label>
-            <input type="text" id="user" placeholder="username" /><br />
+            <input type="text" id="user" placeholder="username" autocomplete="username" /><br />
         </div>
         </div>
     </div>
@@ -11,10 +11,10 @@
         <div class="grid-x grid-padding-x">
         <div class="medium-8 large-6 cell">
             <label for="pass" class="middle">password:</label>
-            <input type="password" id="pass" placeholder="password" /><br />
+            <input type="password" id="pass" placeholder="password" autocomplete="current-password"/><br />
         </div>
         </div>
-        <a href="" class="button large" id="submitbtn">submit</a>
+        <a href="" class="button large" id="submitbtn" class="login">submit</a>
     </div>
 </form>
 
