login/signup form connected with backend

--- a/views/allposts.handlebars
+++ b/views/allposts.handlebars
@@ -3,7 +3,7 @@
     <div class="grid-x align-center grid-margin-x">
     <div class="card cell small-10 large-7 align-spaced">
         <h4 class="card-divider align-center">
-        <a href="/singlepost">from advisor to developer</a>
+        <a href="allposts/singlepost">from advisor to developer</a>
         </h4>
         <div class="card-section text-center">
         <p>
@@ -14,7 +14,7 @@
         <div class="grid-container">
             <div class="grid-x grid-padding-x">
             <div class=" cell">
-                <h5><a href="" class="button">view comments</a></h5>
+                <h5><a href="/allposts/singlepost" class="button">view comments</a></h5>
             </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
         <div class="grid-container">
             <div class="grid-x grid-padding-x">
             <div class=" cell">
-                <h5><a href="" class="button">view comments</a></h5>
+                <h5><a href="/" class="button">view comments</a></h5>
             </div>
             </div>
         </div>
