--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -54,7 +54,7 @@
         ></textarea>
         </div>
     </div>
-    <a href="" class="button large" id="submitbtn">submit</a>
+    <button class="button large" id="submitbtn" type="submit">submit</a>
     </div>
 </form>
 </div>
