--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -42,8 +42,8 @@
                     <div class="grid-x grid-padding-x">
                     <div class="small-10 large-12 cell">
                         <label for="user" class="middle ">add comment:</label>
-                        <textarea type="text" id="user" placeholder="comment" ></textarea><br />
-                        <a href="" class="button" id="com-button">submit</a>
+                        <textarea type="text" id="user" placeholder="comment" name="comment-body" ></textarea><br />
+                        <button type="submit" class="button" id="com-button">submit</button>
                     </div>
                     </div>
                 </div>
@@ -53,3 +53,4 @@
     </div>
 </div>
 </div>
+<script src="/javascript/comment.js"></script>
