--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,8 @@
     <div class="grid-container">
         <div class="grid-x grid-padding-x">
         <div class="medium-8 large-6 cell">
-            <label for="user" class="middle">username:</label>
-            <input type="text" id="user" placeholder="username" autocomplete="username" /><br />
+            <label for="email" class="middle">email:</label>
+            <input type="text" id="email" placeholder="email" autocomplete="email" /><br />
         </div>
         </div>
     </div>
@@ -14,7 +14,7 @@
             <input type="password" id="pass" placeholder="password" autocomplete="current-password"/><br />
         </div>
         </div>
-        <a href="" class="button large" id="submitbtn" class="login">submit</a>
+        <button class="button large" id="submitbtn" type="submit">submit</a>
     </div>
 </form>
 
