create post form and linked to home page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,7 @@
     <h2><a href="">about</a></h2>
     <h2><a href="">cat-a-log</a></h2>
     <h2><a href="">resources</a></h2>
-    <h2><a href="" class="button large">create a post</a></h2>
+    <h2><a href="/create_a_post" class="button large">create a post</a></h2>
 </div>
 </section>
 <!--Posts section-->
