--- a/views/create_a_post.handlebars
+++ b/views/create_a_post.handlebars
@@ -1,3 +1,28 @@
 <div class="header">
     <h2>create a post</h2>
 </div>
+<form>
+    <input type="radio" id="SHARE YOUR STORY" name="topic" value="share your story">
+    <label for="SHARE YOUR STORY">share your story</label><br>
+    <input type="radio" id="EXPECTATIONS VS REALITY" name="topic" value="expectations vs reality">
+    <label for="EXPECTATIONS VS REALITY">expectations vs reality</label><br>
+    <input type="radio" id="ESSENTIALS" name="topic" value="essentials">
+    <label for="ESSENTIALS">essentials</label><br>
+    <input type="radio" id="SURVIVAL SKILLS" name="topic" value="survival skills">
+    <label for="SURVIVAL SKILLS">survival skills</label><br>
+</form>
+<form>
+    <div class="grid-container">
+        <div class="grid-x grid padding-x">
+            <div class="medium-8 large-6 cell">
+                <label for="title" class="middle">name your post</label>
+                <input type="text" id="user" placeholder="name your post">
+            </div>
+        </div>
+    </div>
+</form>
+<form action="/Applications/">
+    <label for="body">post:</label>
+    <textarea id="postBox" cols="50" rows="10" type="text" id="body" name="body" placeholder="post"></textarea><br><br>
+    <input type="submit" value="submit">
+</form>
