--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
 <section>
 <div id="nav">
     <h2><a href="">about</a></h2>
-    <h2><a href="">cat-a-log</a></h2>
+    <h2><a href="/cat-a-log">cat-a-log</a></h2>
     <h2><a href="">resources</a></h2>
     <h2><a href="/create_a_post" class="button large">create a post</a></h2>
 </div>
