--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div id="head">
-        <h1><a href=""><img src="/assets/images/cat-on-log.jpg" alt="Cat on a Log" id="logo">web-dev social</a></h1>
+        <h1><a href="/"><img src="/assets/images/cat-on-log.jpg" alt="Cat on a Log" id="logo">web-dev social</a></h1>
         <div>
           <a href="/">login</a>
           <a href="/">sign up</a>
