add session and logout button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -76,6 +76,12 @@
     padding: 10px;
     font-size: larger;
   }
+
+  #logout {
+    font-weight: bold;
+    padding: 10px;
+    font-size: larger;
+  }
   
   .head h1 {
     font-size: 43px;
