--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,9 +22,11 @@
         <img src="/assets/images/cat-on-log.png" alt="Cat on a Log" id="logo">
         web-dev social</a></h1>
         <div>
-          <a href="/login">login</a>
-          <a href="/signup">sign up</a>
-          <a href="" class="button large" id="crtbtn">create a post</a>
+
+            <a href="/login">login</a>
+            <a href="/signup">sign up</a>
+            <button id="logout">logout</button>
+            <a href="" class="button large" id="crtbtn">create a post</a>
         </div>
       </div>
     </header>
@@ -41,5 +43,8 @@
     <!--import js & cdn for gradient/granim feature-->
     <script src="https://cdn.tutorialjinni.com/granim/2.0.0/granim.js"></script>
     <script src="/javascript/main.js"></script>
+
+    <script src="/javascript/logout.js"></script>
+
   </body>
 </html>
