--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <div>
-<form class="signup">
+<div class="signup">
     <div class="grid-container">
     <div class="grid-x grid-padding-x">
         <div class="medium-6 cell">
@@ -56,7 +56,7 @@
     </div>
     <a href="" class="button large" id="submitbtn">submit</a>
     </div>
-</form>
+</div>
 </div>
 <!--import signup javascript-->
 
