updated cat-a-log styling

--- a/views/cat-a-log.handlebars
+++ b/views/cat-a-log.handlebars
@@ -1,27 +1,27 @@
 <section>
-    <section id="title">
+    <section id="cat-a-log-title">
         <h1>cat-a-log</h1>
     </section>
 </section>
 <!-- Our names and bios-->
-<section class="names">
-    <div id="Boris">
+<section id="cat-a-log-names">
+    <div id="Boris" class="cat-a-log-name">
         <h2>Boris</h2>
         <p>Hello, My name is Boris, I recently graduated from a coding bootcamp. It’s an extremely challenging and rewarding experience at the same time. I’ve met some incredible people along the way and now I look forward to start working on some real life projects, building websites, web applications and see what his new career opportunity has to offer</p>
     </div>
-    <div id="Maddie">
+    <div id="Madi" class="cat-a-log-name">
         <h2>Madi</h2>
         <p>I'm a full-stack developer in the Phoenix metro area. When I'm not coding, you can often find me going to live & local music or curling up with a good book or show I can binge</p>
     </div>
-    <div id="Michael">
+    <div id="Michael" class="cat-a-log-name">
         <h2>Michael</h2>
         <p>Vietnamese developer wanna be. Hobbies include video games and volleyball</p>
     </div>
-    <div id="Oscar">
+    <div id="Oscar" class="cat-a-log-name">
         <h2>Oscar</h2>
         <p>Father , husband , full stack web developer. From GTO, Mexico to the worldwide web. The code game is a cold game. Se habla español</p>
     </div>
-    <div id="Griffin">
+    <div id="Griffin" class="cat-a-log-name">
         <h2>Griffin</h2>
         <p>I am an aspiring full stack web developer born and raised in the steel city. I like to spend my free time hanging out with friends, listening to music, or playing hockey</p>
     </div>
