--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -209,7 +209,29 @@ textarea {
 }
   
   /*Cat-a-log*/
+
+  #cat-a-log-names {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
   
+  .cat-a-log-name {
+    width: 33%;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.3);
+  }
+
+  #cat-a-log-title {
+    text-align: center;
+  }
+
   /*Posts*/
   
   .comment {
