--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -247,6 +247,35 @@ textarea {
       border-top: 1px solid black;
   }
 
+  #create-post-form {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #create-post-title {
+    text-align: center;
+  }
+
+  #create-post-submit {
+    background-color: white;
+    color: #000; 
+    color: rgba(0, 0, 0, 0.5);
+    margin-top:0px;
+    border-radius: 50px;
+    opacity: 100%;
+    padding:13px;
+    mix-blend-mode: screen;
+}
+  
+#create-post-submit:hover {
+    background-color: white;
+    color: #000; 
+    color: rgba(0, 0, 0, 0.5);
+    opacity: 90%;
+    mix-blend-mode: screen;
+}
+
     /*BONUS PAGE*/
   
   /* Media Queries */
