--- a/views/create_a_post.handlebars
+++ b/views/create_a_post.handlebars
@@ -1,7 +1,7 @@
-<div class="header">
+<div class="header" id="create-post-title">
     <h2>create a post</h2>
 </div>
-<form action="/api/comment">
+<form action="/api/comment" id="create-post-form">
     <input type="radio" id="SHARE_YOUR_STORY" name="topic" value="share your story">
     <label for="SHARE_YOUR_STORY">share your story</label><br>
     <input type="radio" id="EXPECTATIONS_VS_REALITY" name="topic" value="expectations vs reality">
@@ -20,5 +20,5 @@
     </div>
     <label for="body">post:</label>
     <textarea id="postBox" cols="50" rows="10" type="text" id="post_body" name="post_body" placeholder="post"></textarea><br><br>
-    <input type="submit" value="submit">
+    <input type="submit" value="submit" id="create-post-submit">
 </form>
