more changes to script

--- a/views/create_a_post.handlebars
+++ b/views/create_a_post.handlebars
@@ -26,3 +26,5 @@
     <textarea id="postBox" cols="50" rows="10" type="text" id="body" name="body" placeholder="post"></textarea><br><br>
     <input type="submit" value="submit">
 </form>
+
+<script src="/public/javascript/addpost.js"></script>
