--- a/views/create_a_post.handlebars
+++ b/views/create_a_post.handlebars
@@ -11,20 +11,18 @@
     <input type="radio" id="SURVIVAL SKILLS" name="topic" value="survival skills">
     <label for="SURVIVAL SKILLS">survival skills</label><br>
 </form>
-<form>
+<form class= "comment-form">
     <div class="grid-container">
         <div class="grid-x grid padding-x">
             <div class="medium-8 large-6 cell">
                 <label for="title" class="middle">name your post</label>
-                <input type="text" id="user" placeholder="name your post">
+                <input type="text" id="postTitle" placeholder="name your post">
             </div>
         </div>
     </div>
-</form>
-<form action="/Applications/">
     <label for="body">post:</label>
-    <textarea id="postBox" cols="50" rows="10" type="text" id="body" name="body" placeholder="post"></textarea><br><br>
-    <input type="submit" value="submit">
+    <textarea id="comment-body" cols="50" rows="10" type="text" id="body" name="body" placeholder="post"></textarea><br><br>
+    <input id="postSubmit" type="submit" value="submit">
 </form>
 
-<script src="/public/javascript/addpost.js"></script>
+<script src="/javascript/addpost.js"></script>
