changes to connections

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,6 +26,7 @@
           <a href="/signup">sign up</a>
           <button id="logout">logout</button>
           <a href="/create_a_post" class="button large" id="crtbtn">create a post</a>
+          <a href="/dashboard" class="button large" id="crtbtn">Personal Dashboard</a>
 
         </div>
       </div>
