--- a/views/create_a_post.handlebars
+++ b/views/create_a_post.handlebars
@@ -1,28 +1,46 @@
-<div class="header">
-    <h2>create a post</h2>
-</div>
-<form>
-    <input type="radio" id="SHARE YOUR STORY" name="topic" value="share your story">
-    <label for="SHARE YOUR STORY">share your story</label><br>
-    <input type="radio" id="EXPECTATIONS VS REALITY" name="topic" value="expectations vs reality">
-    <label for="EXPECTATIONS VS REALITY">expectations vs reality</label><br>
-    <input type="radio" id="ESSENTIALS" name="topic" value="essentials">
-    <label for="ESSENTIALS">essentials</label><br>
-    <input type="radio" id="SURVIVAL SKILLS" name="topic" value="survival skills">
-    <label for="SURVIVAL SKILLS">survival skills</label><br>
-</form>
-<form class= "comment-form">
-    <div class="grid-container">
-        <div class="grid-x grid padding-x">
-            <div class="medium-8 large-6 cell">
-                <label for="title" class="middle">name your post</label>
-                <input type="text" id="postTitle" placeholder="name your post">
+<div class="container text-light">
+    <section class="newPost">
+        <h2>Create New Post</h2>
+
+        <form class="new-post-form">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Title</span>
+                </div>
+                <input id="post-title" type="text" class="form-control" aria-label="Default"
+                    aria-describedby="inputGroup-sizing-default" name="post-title" maxlength="50">
             </div>
-        </div>
-    </div>
-    <label for="body">post:</label>
-    <textarea id="comment-body" cols="50" rows="10" type="text" id="body" name="body" placeholder="post"></textarea><br><br>
-    <input id="postSubmit" type="submit" value="submit">
-</form>
+
+            <div>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Body</span>
+                    </div>
+                    <textarea id="post-content" class="form-control" aria-label="With textarea"
+                        name="post-content" maxlength="255"></textarea>
+                </div>
+
+            </div>
+            <button id="postBtn" type="submit" class="btn btn-primary text-light create">Create</button>
+        </form>
+    </section>
+
+    {{#if post.length}}
+
+    <h2>Your Posts</h2>
+    <ul class="yourPosts text-light">
+        {{#each post as |post|}}
+        <li class="post-li bg-dark postWithEdit">
+            
+            <div class="row editRow">
+                <div class="col-10">{{> post-info post }}</div>
+                <div class="col-2 editBtn"><a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>    
+            </div>
+        </li>
+        {{/each}}
+    </ul>
+
+    {{/if}}
+</div>
 
 <script src="/javascript/addpost.js"></script>
