--- a/views/cat-a-log.handlebars
+++ b/views/cat-a-log.handlebars
@@ -7,7 +7,7 @@
 <section id="cat-a-log-names">
     <div id="Boris" class="cat-a-log-name">
         <h2>Boris</h2>
-        <p>Hello, My name is Boris, I recently graduated from a coding bootcamp. It’s an extremely challenging and rewarding experience at the same time. I’ve met some incredible people along the way and now I look forward to start working on some real life projects, building websites, web applications and see what his new career opportunity has to offer</p>
+        <p>Hello, My name is Boris, I recently graduated from a coding bootcamp. It’s an extremely challenging and rewarding experience at the same time. I’ve met some incredible people along the way and now I look forward to start working on some real life projects, building websites, web applications and see what this new career opportunity has to offer</p>
     </div>
     <div id="Madi" class="cat-a-log-name">
         <h2>Madi</h2>
