--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -9,6 +9,9 @@
       <div class="text">
         {{comment_text}}
       </div>
+      </div>
+      <button class="button large" id="submitbtn" type="click">submit</a>
+    </div>
     </section>
   {{/each}}
 </div>
