--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -3,16 +3,14 @@
     <div class="grid-x align-center grid-margin-x">
     <div class="card cell small-10 large-10 align-spaced">
         <h4 class="card-divider">
-        <a href="">from advisor to developer</a>
+        <a href=""> {{ post.title }}</a>
         </h4>
         <div class="card-section">
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit assumenda numquam 
-            reprehenderit laudantium delectus quidem, consectetur similique, suscipit quae unde 
-            rerum libero odit omnis vitae sint eaque! Numquam, quo nam.
+            {{ post.post_content }}
         </p>
         <p>
-            -username
+            - {{ post.username }}
         </p>
         <div class="comment">
             <div>
