updated links & about

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -56,10 +56,9 @@
 </div>
 <div class="about">
     <p>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos,
-    officiis similique ipsam voluptates architecto debitis deserunt
-    ducimus praesentium eligendi doloremque, veniam soluta repellendus
-    fuga a ex provident voluptatem alias enim.
+    A social networking platform that helps prospective web development bootcamp participants to 
+    connect with current and past bootcamp survivors, where they can get advice, feedback, create personal 
+    connections, and where boot camp graduates can help others who once were in their position.
     </p>
 </div>
 </section>
