--- a/views/resources.handlebars
+++ b/views/resources.handlebars
@@ -11,9 +11,9 @@
                 <a href="">programming languages</a>
             </h4>
             <ul>
-                <li>html</li>
-                <li>css</li>
-                <li>javascript</li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">html</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">css</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">javascript</a></li>
             </ul>
             <div class="card-section text-center">
             </div>
